<resources>
    <string name="app_name">Party Pool</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_username">This username is invalid</string>

    <string name="error_invalid_password">Password Is Not Between 6 - 18 Characters Long</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_password_not_match">The passwords do not match</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="username">Username</string>
    <string name="welcome_to_partypool">Welcome To PartyPool</string>
    <string name="todo">TODO</string>
    <string name="sign_in">Sign In</string>
    <string name="log_in">Log In</string>
    <string name="register">Register</string>
    <string name="login_successful">Login Successful!</string>
    <string name="this_is_the_create_join_party_page">This is the create/join party page</string>
    <string name="title_activity_account_creation">Sign in</string>
    <string name="create_username">Create Username</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_password">Create Password</string>
    <string name="textview">TextView</string>
    <string name="welcome_user">Welcome [USER]</string>
    <string name="button1">Button</string>
    <string name="join_a_party">Join A Party</string>
    <string name="button2">Button</string>
    <string name="create_a_party">Create A Party</string>
    <string name="continue_party">Continue Party</string>
    <string name="view_profile">View Profile</string>
    <string name="log_out">Log Out</string>
    <string name="lucky_text">I\'m Feeling Lucky!</string>
    <string name="guestPartySongTitle">Song Name</string>
    <string name="guestPartyArtistAlbum">Artist - Album</string>
    <string name="guestPartyName">Party Name: </string>
    <string name="guestPartyTimer">Next Vote In: </string>
    <string name="adminPartySize">Party Size: </string>
    <string name="adminSongNumber">Songs in Pool: </string>
    <string name="partyModeVerifyWelcome">The Party Has Almost Started! Please Make A Note Of The
    Following Password:</string>
    <string name="partyModeVerifyPasswordPH">%1$s</string>
    <string name="partyModeVerifyMessageTwo">Share This Out Amongst Friends So They Can Join The
        Party!</string>
    <string name="partyModeVerifyConfirm">We\'re All Set! Your Party Will Run In %1$s Mode</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_infomation">Enter Information</string>
    <string name="re_enter_password">Re-Enter Password</string>
</resources>
