<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

        <TextView
            android:id="@+id/messageOne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollHorizontally="false"

            android:gravity="center"
            android:text="@string/partyModeVerifyWelcome"
            android:textSize="24sp"/>

        <TextView
            android:id="@+id/passwordPlaceholder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollHorizontally="false"

            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp"

            android:gravity="center"
            android:text="@string/partyModeVerifyPasswordPH"
            android:textSize="32sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/messageTwo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:scrollHorizontally="false"
            android:gravity="center"
            android:text="@string/partyModeVerifyMessageTwo"
            android:textSize="24sp"/>

        <TextView
            android:id="@+id/messageConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="25dp"

            android:gravity="center"
            android:text="@string/partyModeVerifyConfirm"
            android:textSize="24sp"/>
    </LinearLayout>

</RelativeLayout>