<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MidPartyFrag"
    android:background="@android:color/transparent">

    <!-- TODO: Update blank fragment layout -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="50dp"
        android:background="#AAAAAA"
        android:paddingHorizontal="10dp">

        <ImageView
            android:id="@+id/GuestPartyAlbumArt"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_marginTop="50dp"
            android:layout_centerHorizontal="true"
            android:background="#FFFFFF"/>

        <TextView
            android:id="@+id/GuestPartySongTitle"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="360dp"
            android:text="@string/guestPartySongTitle"
            android:textAlignment="center"
            android:gravity="center"
            android:background="#FFFFFF"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/GuestPartyArtistAlbum"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="415dp"
            android:gravity="center"
            android:text="@string/guestPartyArtistAlbum"
            android:textSize="20sp"
            android:background="#FFFFFF"/>

        <TextView
            android:id="@+id/GuestPartyName"
            android:layout_width="300dp"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:background="#FFFFFF"
            android:text="@string/guestPartyName"
            android:textSize="15sp"
            android:gravity="center_vertical"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/GuestPartyTimer"
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="490dp"
            android:background="#FFFFFF"
            android:text="@string/guestPartyTimer"
            android:gravity="center"
            android:textSize="25sp"/>

    </RelativeLayout>

</FrameLayout>